local/destination-rule-gateway-namespace.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: istio-egressgateway-1-16-svc
  namespace: istio-gateways
spec:
  exportTo:
  - .
  host: istio-egressgateway-1-16.istio-egress.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: ISTIO_MUTUAL
        sni: httpbin.external
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: istio-egressgateway-1-16-vd
  namespace: istio-gateways
spec:
  exportTo:
  - .
  host: istio-egressgateway-1-16.global
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: ISTIO_MUTUAL
        sni: httpbin.external
